--- a/app/views/todolists/index.html.erb
+++ b/app/views/todolists/index.html.erb
@@ -6,5 +6,8 @@
       	<!-- リンクの設定 <%=link_to list.title, "/todolists/#{list.id}" %> のURLを名前付きルートに変更する↓ -->
       	<%=link_to list.title, todolist_path(list.id) %>
       </span>
+
+      <p>画像</p>
+  	  <%= attachment_image_tag list, :image, :fill, 100, 100, format: 'jpeg' %>
    <% end %>
    <!-- ******************************* -->
